fix align map-lokasi-menu

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -65,7 +65,7 @@ body {
 	}
 }
 
-#map-menu.panel {
+#map-menu.panel, #map-lokasi-menu.panel {
 	margin-top: 10px;
 	border-radius: 0px;
 }
